Fix with spacing in proj-text

--- a/style.css
+++ b/style.css
@@ -50,6 +50,6 @@ body {
   background-color: black;
   position: inline;
   margin-top: 25px;
-  margin-left: 2px;
+  margin-left: 0px;
   font-family: Verdana;
 }
